# pyradox

./: .gitignore  blank_map.py  casualties.py  climate_map.py  continent_map.py  country_table.py  edge_image_test.py  id_map.py  idea_test.py  license.txt  military_tech.py  native_map.py  province_base_map.py  readme.txt  region_map.py  reverse_unis.py  savetest.py  setup.cfg  terrain_map.py  trade_center_map.py  trade_good_icon_map.py  trade_good_map.py  trade_good_province_count.py  unify_islam_map.py  wargoal_table.py
.github/workflows/: publish-pypi.yml
apps/battle_extractor/: battle_extractor.py  readme.txt
apps/casualty_extractor/: casualty_extractor.py  readme.txt
apps/trade_extractor/: readme.txt  trade_extractor.py
pyradox/: __init__.py  color.py  config.py  csv.py  error.py  format.py  image.py  load.py  primitive.py  struct.py  table.py  token.py  txt.py  wiki.py  worldmap.py  yml.py
pyradox/datatype/: __init__.py  color.py  primitive.py  table.py  time.py  tree.py  util.py
pyradox/eu4/: country.py  province.py
pyradox/filetype/: csv.py  json.py  table.py  txt.py  wiki.py  yml.py
pyradox/hoi3/: tech.py  unit.py
pyradox/hoi4/: equipment.py
scripts/eu4/: _initpath.py  battle_test.py  blank_map.py  casualties.py  climate_map.py  colony_graph.py  continent_map.py  country_table.py  culture_stats.py  custom_nation_ideas.py  edge_image_test.py  id_map.py  idea_costs.py  idea_map.py  (+25 more)
tests/: _initpath.py  color_test.py  csv_test.py  escape_test.py  extract_casualties.py  group_test.py  save_excerpt.py  table_test.py  time_test.py  txt_test.py
(+82 files in other folders)
