[metadata]
name = pyradox-txt-parser
version = attr: pyradox.__version__
author = Albert Julius Liu
author_email = ajul1987@gmail.com
description = Parser for Paradox Development Studio game files.
long_description = file: readme.txt
long_description_content_type = text/markdown
url = https://github.com/ajul/pyradox
project_urls =
    Twitter = https://twitter.com/highdiceroller
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Other Scripting Engines
    Programming Language :: Python :: 3
    Topic :: Games/Entertainment

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[options.extras_require]
worldmap =
    pillow
